#38: fix Dev